--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elixir-jsonschema-validator",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "Custom JSON-Schema keywords for Ajv validator and validation service with API",
   "main": "index.js",
   "repository": "https://github.com/elixir-europe/json-schema-validator.git",
@@ -40,7 +40,8 @@
     "update": "^0.7.4",
     "winston": "^3.0.0-rc6",
     "winston-daily-rotate-file": "^3.2.1",
-    "yargs": "^11.0.0"
+    "yargs": "^11.0.0",
+    "event-stream": "=3.3.4"
   },
   "devDependencies": {
     "jest": "^22.4.3",
